--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@grafana/schema": "10.3.3",
     "@grafana/ui": "10.3.3",
     "@mui/material": "^5.15.20",
+    "colorjs.io": "^0.5.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "18.2.0",
